# KLog

./: .gitignore  .replit  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: DETAILED_DESIGN.md
examples/: example.py
klog/: __init__.py  custom_formatter.py  custom_logger.py  defaults.py  klog.py  text_styles.py
klog/templates/basic/: _config.j2  critical_template.j2  debug_template.j2  error_template.j2  info_template.j2
klog/templates/default/: _config.j2  warning_template.j2
klog/templates/none/: _config.j2  base_template.j2
scripts/: export_claude.py
