# pyproject.toml

[tool.poetry]
name = "klog"
version = "0.0.0"
description = "User focussed simple logging wrapper for python applications."
authors = ["David Hooton <KLog+david@hooton.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "klog" }]
keywords = ["logging", "custom logging", "python", "klog"]
homepage = "https://github.com/djh00t/klog"
repository = "https://github.com/djh00t/klog"
documentation = "https://github.com/djh00t/klog/blob/main/README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
wcwidth = "^0.2.13"
typing-extensions = "^4.12.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^2.11"
black = "^24.3"
flake8 = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
